--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
     "pg": "^8.11.1",
-    "xml2js": "^0.4.23"
+    "xml2js": "^0.4.23",
+    "@supabase/supabase-js": "^2.42.4"
   }
 }
