--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "axios": "^1.6.0",
+    "bcrypt": "^5.1.0",
     "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -15,6 +16,6 @@
     "pg": "^8.11.1",
     "xml2js": "^0.4.23",
     "@supabase/supabase-js": "^2.42.4",
-    "streamifier": "^0.1.1"
+    "jsonwebtoken": "^9.0.0"
   }
 }
