--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
     "pg": "^8.11.1",
+    "streamifier": "^0.1.1",
     "xml2js": "^0.4.23",
     "@supabase/supabase-js": "^2.42.4",
     "jsonwebtoken": "^9.0.0"
