--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,4 @@ SUPABASE_KEY=your-service-role-key
 CLOUDINARY_CLOUD_NAME=your-cloud-name
 CLOUDINARY_API_KEY=your-api-key
 CLOUDINARY_API_SECRET=your-api-secret
+JWT_SECRET=supersecretkey123
