--- a/package.json
+++ b/package.json
@@ -6,17 +6,18 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.42.4",
     "axios": "^1.6.0",
     "bcrypt": "^5.1.0",
     "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "multer": "^1.4.5-lts.1",
+    "node-fetch": "^3.4.0",
     "pg": "^8.11.1",
     "streamifier": "^0.1.1",
-    "xml2js": "^0.4.23",
-    "@supabase/supabase-js": "^2.42.4",
-    "jsonwebtoken": "^9.0.0"
+    "xml2js": "^0.4.23"
   }
 }
