--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "multer": "^1.4.5-lts.1",
-    "node-fetch": "^3.4.0",
+    "node-fetch": "2.6.12",
     "pg": "^8.11.1",
     "streamifier": "^0.1.1",
     "xml2js": "^0.4.23"
