--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "node-fetch": "2.6.12",
     "pg": "^8.11.1",
     "streamifier": "^0.1.1",
-    "xml2js": "^0.4.23"
+    "xml2js": "^0.4.23",
+    "ssh2-sftp-client": "^9.0.4"
   }
 }
